--- a/StudentHub/Client/Pages/Chat.razor
+++ b/StudentHub/Client/Pages/Chat.razor
@@ -2,6 +2,7 @@
 @using StudentHub.Shared
 @using Microsoft.AspNetCore.Authorization
 @using System.Net.Http.Headers
+@using System.Text
 @attribute [Authorize]
 
 @inject HttpClient Http
@@ -59,7 +60,7 @@
 
 <h3>Chat with ChatGPT</h3>
 <div class="chat-container">
-    @foreach (var message in messages ?? new List<ChatMessage>())
+    @foreach (var message in messages)
     {
         <div class="chat-message">
             @message.UserId: @message.Message
@@ -67,8 +68,9 @@
     }
 </div>
 <div style="text-align: center;">
-    <InputFile OnChange="@OnFileSelected"/>
-    <button type="submit" class="btn btn-success btn-block m-1" @onclick="SubmitFileAsync">Upload</button>
+    <InputFile OnChange="SelectFile" />
+    <button class="btn btn-success btn-block m-1" 
+            @onclick="UploadFile">Upload</button>
     <br/>
     <input class="chat-input" @bind="newMessage"/>
     <button class="send-button" @onclick="SendMessage">Send</button>
@@ -99,64 +101,59 @@
             Message = newMessage,
             Timestamp = DateTime.Now
         };
-        messages.Add(message);
-        newMessage = string.Empty;
+        messages?.Add(message);
         await GetResponse();
     }
 
     private async Task GetResponse()
     {
-        var content = new MultipartFormDataContent();
-        content.Add(new StringContent(newMessage), "question");
-        content.Add(new StringContent("SingleSession"), "studySessionId"); 
-        content.Add(new StringContent(userGuid), "userGuid");
-        var response = await Http.PostAsJsonAsync("/AiTools/chat", content);
-        newMessage = response.ToString();
-        var message = new ChatMessage
-        {
-            UserId = userGuid ?? "You",
-            Message = newMessage,
-            Timestamp = DateTime.Now
-        };
-        messages.Add(message);
-        newMessage = string.Empty;
-    }
+        StringContent content = new StringContent(newMessage, Encoding.UTF8, "text/plain");
+        var response = await Http.PostAsync($"octolearnapi/AiTools/sendChat?studySessionId=SingleSession&userGuid={userGuid}", content);
 
-    private Stream _fileStream = null;
-    IBrowserFile? file;
-    private string _selectedFileName = null;
-
-    private void OnFileSelected(InputFileChangeEventArgs e)
-    {
-        file = e.File;
-        _selectedFileName = file.Name;
-    }
-    
-    private async Task SubmitFileAsync()
-    {
-        Console.WriteLine(file.Name);
-        var content = new MultipartFormDataContent();
-
-        if (file != null)
-        {
-            using var fileStream = file.OpenReadStream(1000000 ); // Adjust as necessary
-            var fileContent = new StreamContent(fileStream);
-            fileContent.Headers.ContentType = new MediaTypeHeaderValue(file.ContentType);
-            content.Add(fileContent, "\"file\"", _selectedFileName);
-        }
-        Console.WriteLine(content.Headers.ToString());
-
-        content.Add(new StringContent("SingleSession"), "sessionName");
-        content.Add(new StringContent(userGuid), "userGuid");
-
-        var response = await Http.PostAsync("StudySession/makesession", content);
         if (response.IsSuccessStatusCode)
         {
-            Console.WriteLine("success");
+            Console.WriteLine("Success");
+            var responseMessage = await response.Content.ReadAsStringAsync();
+            var chatResponse = new ChatMessage
+            {
+                UserId = "Pookie bot",
+                Message = responseMessage,
+                Timestamp = DateTime.Now
+            };
+            messages?.Add(chatResponse);
         }
         else
         {
-            Console.WriteLine("fail");
+            Console.WriteLine("Error");
+        }
+        newMessage = "";
+    }
+    private IBrowserFile? selectedFile;
+
+    // Uploading a file to the DB
+    private Task SelectFile(InputFileChangeEventArgs e)
+    {
+        selectedFile = e.File;
+        return Task.CompletedTask;
+    }
+
+    private async Task UploadFile()
+    {
+        if (selectedFile != null)
+        {
+            await using var stream = selectedFile.OpenReadStream();
+            using var content = new MultipartFormDataContent();
+            using var fileContent = new StreamContent(stream);
+
+            fileContent.Headers.ContentDisposition = new ContentDispositionHeaderValue("form-data")
+            {
+                Name = "file",
+                FileName = selectedFile.Name
+            };
+
+            content.Add(fileContent);
+
+            await Http.PostAsync($"octolearnapi/StudySession/makesession?sessionName=SingleSession&userGuid={userGuid}", content);
         }
     }
 }
