--- a/StudentHub/Client/Shared/MainLayout.razor
+++ b/StudentHub/Client/Shared/MainLayout.razor
@@ -1,18 +1,30 @@
 ﻿@inherits LayoutComponentBase
 
 <div class="page">
-    <div class="sidebar">
-        <NavMenu/>
+    <div class="sidebar" style="@IconMenuCssClass">
+        <NavMenu ShowIconMenu="ToggleIconMenu"/>
     </div>
 
     <main>
         <div class="top-row px-4 auth">
+            <h2 style="color: #0d6efd; margin: 0; flex: auto;">Study buddy pookie bear</h2>
             <LoginDisplay/>
             <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
         </div>
 
-        <article class="content px-4">
+        <article class="content px-1">
             @Body
         </article>
     </main>
 </div>
+
+@code{
+    private bool _iconMenuActive { get; set; }
+    private string? IconMenuCssClass => _iconMenuActive ? "width: 80px;" : null;
+
+    protected void ToggleIconMenu(bool iconMenuActive)
+    {
+        _iconMenuActive = iconMenuActive;
+    }
+
+}
