--- a/StudentHub/Client/Shared/NavMenu.razor
+++ b/StudentHub/Client/Shared/NavMenu.razor
@@ -1,40 +1,76 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="">StudentHub</a>
-        <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-    </div>
-</div>
+﻿<style>
+  .nav-item {
+    display: flex;
+    align-items: center;
+    padding: 0.5rem 1rem;
+    text-decoration: none;
+    color: white;
+  }
+  .nav-item:hover {
+    background-color: #333;
+  }
+  .nav-item .menu-text {
+    margin-left: 0.5rem;
+    display: @(!IconMenuActive ? "inline" : "none");
+  }
+  .nav-link.active {
+    background-color: #0056b3;
+  }
+  .icon-menu-arrow {
+    background: none;
+    border: none;
+    cursor: pointer;
+  }
+</style>
 
-<div class="@NavMenuCssClass nav-scrollable" @onclick="ToggleNavMenu">
+<div class="@NavMenuCssClass">
     <nav class="flex-column">
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="chat">
-                <span class="oi oi-plus" aria-hidden="true"></span> Chat
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
-            </NavLink>
-        </div>
+        <NavLink class="nav-item nav-link" href="" Match="NavLinkMatch.All">
+            <span class="oi oi-home" aria-hidden="true"></span>
+            <span class="menu-text">Home</span>
+        </NavLink>
+        <NavLink class="nav-item nav-link" href="chat">
+            <span class="oi oi-chat" aria-hidden="true"></span>
+            <span class="menu-text">Chat</span>
+        </NavLink>
+        <NavLink class="nav-item nav-link" href="tbd">
+            <span class="oi oi-list-rich" aria-hidden="true"></span>
+            <span class="menu-text">TBD</span>
+        </NavLink>
     </nav>
 </div>
 
+<div class="bottom-row">
+    <div class="icon-menu-arrow" @onclick="ToggleIconMenu">
+        @if (!IconMenuActive)
+        {
+            <span class="oi oi-arrow-left" style="color: white;"></span>
+        }
+        else
+        {
+            <span class="oi oi-arrow-right" style="color: white;"></span>
+        }
+    </div>
+</div>
+
+
 @code {
-    private bool collapseNavMenu = true;
+    //bool to send to MainLayout for shrinking sidebar and showing/hide menu text
+    private bool IconMenuActive { get; set; } = false;
 
-    private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
+    //EventCallback for sending bool to MainLayout
+    [Parameter]
+    public EventCallback<bool> ShowIconMenu { get; set; }
 
-    private void ToggleNavMenu()
+    public object NavMenuCssClass { get; set; }
+    private string IconArrow => IconMenuActive ? "oi-arrow-right" : "oi-arrow-left";
+
+
+    //Method to toggle IconMenuActive bool and send bool via EventCallback
+    private async Task ToggleIconMenu()
     {
-        collapseNavMenu = !collapseNavMenu;
+        IconMenuActive = !IconMenuActive;
+        await ShowIconMenu.InvokeAsync(IconMenuActive);
     }
 
 }
