--- a/StudentHub/Server/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/StudentHub/Server/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -1,6 +1,6 @@
 @inject SignInManager<ApplicationUser> SignInManager
 @{
-    var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
+    bool hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
 }
 <ul class="nav nav-pills flex-column">
     <li class="nav-item">
