--- a/StudentHub/Server/Areas/Identity/Pages/Shared/_LoginPartial.cshtml
+++ b/StudentHub/Server/Areas/Identity/Pages/Shared/_LoginPartial.cshtml
@@ -3,7 +3,7 @@
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 @{
-    var returnUrl = "/";
+    string? returnUrl = "/";
     if (Context.Request.Query.TryGetValue("returnUrl", out var existingUrl))
     {
         returnUrl = existingUrl;
