--- a/StudentHub/Server/Pages/Shared/_Layout.cshtml
+++ b/StudentHub/Server/Pages/Shared/_Layout.cshtml
@@ -58,7 +58,7 @@
     <div class="container">
         &copy; 2023 - StudentHub.Server
         @{
-            var foundPrivacy = Url.Page("/Privacy", new { area = "" });
+            string? foundPrivacy = Url.Page("/Privacy", new { area = "" });
         }
         @if (foundPrivacy != null)
         {
