--- a/StudentHub/Client/Shared/NavMenu.razor
+++ b/StudentHub/Client/Shared/NavMenu.razor
@@ -29,7 +29,7 @@
             <span class="oi oi-home" aria-hidden="true"></span>
             <span class="menu-text">Home</span>
         </NavLink>
-        <NavLink class="nav-item nav-link" href="chat">
+        <NavLink class="nav-item nav-link" href="studysessions">
             <span class="oi oi-chat" aria-hidden="true"></span>
             <span class="menu-text">Chat</span>
         </NavLink>
